fix: Sovled unwanted srcoll and uneven session card height in ChatHistory page

--- a/frontend/features/header/styles/index.module.css
+++ b/frontend/features/header/styles/index.module.css
@@ -102,7 +102,7 @@
 /*       for other page titles         */
 /* ----------------------------------- */
 .title {
-  font: normal 30px "Exo2", "Montserrat", sans-serif;
+  font: normal 25px "Exo2", "Montserrat", sans-serif;
 }
 
 /* for PINAC Logo */
